--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,6 +43,7 @@ a {
 p {
   font-family: Darker grotesque;
   font-size: 20px;
+  color: #f7b538;
 }
 .text-box {
   background: var(--fourth-color);
