--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,6 +54,11 @@ p {
   font-size: 20px;
   color: white;
 }
+img:hover {
+  transition: all 150ms ease-in-out;
+  filter: contrast();
+  transform: scale(1.3);
+}
 .text-box {
   background: var(--fourth-color);
 
