--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,7 +39,8 @@ h2 {
 }
 h3 {
   font-size: 24px;
-  color: var(--primary-color);
+  color: white;
+  background-color: #680747;
   opacity: 0.7;
   font-family: Darker grotesque;
 }
@@ -54,13 +55,14 @@ p {
   font-size: 20px;
   color: white;
 }
-img:hover {
+
+img.grid:hover {
   transition: all 150ms ease-in-out;
   filter: contrast();
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 .text-box {
-  background: var(--fourth-color);
+  background: var(--primary-color);
 
   padding: 20px;
   border-radius: 4px;
@@ -73,10 +75,11 @@ img:hover {
 .pages {
   display: flex;
   margin-top: 40px;
+  margin-bottom: 20px;
   justify-content: center;
 }
 .pages a {
-  margin: 20px;
+  margin: 20px 20px 40px 20px;
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
@@ -123,4 +126,16 @@ img:hover {
   text-decoration: none;
   text-transform: capitalize;
   color: white;
+}
+
+.selfie {
+  display: block;
+  text-align: center;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
