--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,8 +59,12 @@ p {
   text-align: center;
 }
 @media (max-width: 576px) {
-  footer {
+  .footer-email {
+    display: block;
+    text-align: center;
+    text-decoration: none;
     font-size: 20px;
+    background-color: var(--tertiary-color);
   }
 }
 
