update text colour

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,7 +109,7 @@ p {
   line-height: 1.5;
   text-align: center;
   font-family: Darker grotesque;
-  color: var(--tertiary-color);
+  color: white;
 }
 .pages {
   display: flex;
